2002-11-07  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c:
	(parse_config_file): setup libxml2 memory functions. Ignore other
	sections than '/apps/libgda/Datasources' (they are not written again to
	the file). Don't add empty sections.
	(gda_config_remove_key): when removing a key, remove also the section
	if it gets empty.

2002-11-07  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* doc/C/libgda-docs.sgml: fixed tutorial example. Thanks to
	calvaris and others for pointing this out.
	* libgda/gda-row.c: added comment to the documentation of
	gda_row_get_value.

2002-11-07  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-client.c: check that provider is not null before doing the
	lookup.

2002-11-05  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c: avoid "no DTD" message from libxml.

2002-11-05  Holger Thon <holger.thon@gnome-db.org>

	* configure.in: Added check for sybase OCli in OCS subdir

	* providers/sybase/libmain.c: added LOCALE parameter

	* providers/sybase/gda-sybase-provider.c: added provider_new,
	shortened open_connection by gda_sybase_connection_data_free,
	added LOCALE parameter, added debug messages, finished 
	open_connection

	* providers/sybase/gda-sybase.h, providers/sybase/utils.c:
	added ocli message callbacks for displaying errors,
	fixed sybase_debug_msg()

	* providers/sybase/gda-sybase-provider.h:
	added CS_GDA_VERSION (define for latest detectable cs version)

	* testing/client.c(test_client): fixed connection to be opened
	with password of GdaDataSourceInfo instead of empty pwd ("")

2002-11-01  Cleber Rodrigues <cleber@gnome-db.org>

	* providers/mysql/gda-mysql-provider.c: added missing mysql_init()
	on the initialization of the connection structure.

2002-11-01  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-freetds-provider.c:
	setting datamodel column titles of schemas moved to gda-tds-schemas.h

	* providers/freetds/gda-tds-schemas.h: